traq-server/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traq-frontend
  name: traq-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-frontend
  template:
    metadata:
      labels:
        app: traq-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traq-ui:3.24.3
          name: traq-frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
