traq-server/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-frontend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: trap-jp-tls
  routes:
    - kind: Rule
      match: Host(`q.trap.jp`)
      services:
        - namespace: traq-server
          kind: Service
          name: traq-frontend
          port: 8000
          scheme: http
          strategy: RoundRobin
          weight: 1
